[package]
name = "lb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18",features = ["trust-dns"] }
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"
dashmap = "5.5.0"
