[package]
name = "lb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.72"
const-str = "0.5.6"
reqwest = "0.11.18"
axum-server = { version = "0.5.1",features = ["tls-rustls"] }
